# AccountScrapper

./: Cargo.toml  accounts.txt  autostart.ps1  captcha.txt  failed_accounts.txt  output_accounts.txt
src/: mail_verifier.rs  main.rs
