[package]
name = "accountscrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser", "winreg"] }