[package]
name = "accountscrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser", "winreg"] }
image = "0.24.6"
screenshots = "0.7.1"
memflex = { version = "0.6", features = ["external"]}
regex = "1.9.1"
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["json", "cookies", "trust-dns"] }
serde = "1.0.182"
rand = "0.8.5"
serde_json = "1.0.104"
anyhow = "1.0.72"
fantoccini = { version = "0.19.3", features = ["rustls-tls"]}
